src/objects/Committee_Member__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committee_Name__c</fullName>
        <label>Committee Name</label>
        <picklist>
            <picklistValues>
                <fullName>Committee 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Committee Members</relationshipLabel>
        <relationshipName>Committee_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Joined_Date__c</fullName>
        <label>Joined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position/Title</label>
        <picklist>
            <picklistValues>
                <fullName>Position 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Position 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Actively Serving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Ended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting to Join</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Ends__c</fullName>
        <label>Term Ends</label>
        <type>Date</type>
    </fields>
    <label>Committee Member</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Committee Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>